# hs-minecraft-data

./: CHANGELOG.md  Setup.hs  hello-polysemy.cabal  hie.yaml  hs-minecraft-data.cabal
app/: Main.hs
app/Data/Minecraft/: Biome.hs  Block.hs
hs-minecraft-data/: LICENSE  hs-minecraft-data.cabal
hs-minecraft-data/src/Data/Minecraft/: Effect.hs  Entity.hs  Food.hs  Instrument.hs  Language.hs  Particle.hs  Tint.hs  Version.hs
hs-minecraft-data/test/: MinecraftDataSpec.hs
src/Data/Minecraft/: Attribute.hs  Effect.hs  Enchantment.hs  Item.hs  Material.hs  Protocol.hs  Recipe.hs  Sound.hs
test/: MinecraftDataSpec.hs
