cabal-version:      3.0
name:               hello-polysemy
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Svyazin
maintainer:         guybrush@live.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hello-polysemy
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Data.Minecraft.Attribute,
        Data.Minecraft.Biome,
        Data.Minecraft.Block
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0, aeson, containers, fused-effects, text, unordered-containers
    hs-source-dirs:   app
    default-language: GHC2024
