cabal-version:      3.0
name:               hello-polysemy
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Svyazin
maintainer:         guybrush@live.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Data.Minecraft.Attribute,
        Data.Minecraft.Biome,
        Data.Minecraft.Block
    -- other-extensions:
    build-depends:    base, aeson, containers, fused-effects, text, unordered-containers
    hs-source-dirs:   src
    default-language: GHC2024

test-suite test-hello-polysemy
    type: exitcode-stdio-1.0
    main-is: MinecraftDataSpec.hs
    build-depends: base, aeson, bytestring, hello-polysemy, hspec, QuickCheck
    hs-source-dirs: test
    default-language: GHC2024