cabal-version:      3.0
name:               hs-minecraft-data
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Svyazin
maintainer:         guybrush@live.ru
build-type:         Custom
extra-doc-files:    CHANGELOG.md

custom-setup
  setup-depends:
    base,
    Cabal,
    directory,
    filepath,
    haskell-src-exts

common warnings
  ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Data.Minecraft.Attribute,
        Data.Minecraft.Biome,
        Data.Minecraft.Block,
        Data.Minecraft.Effect,
        Data.Minecraft.Enchantment,
        Data.Minecraft.Entity,
        Data.Minecraft.Food,
        Data.Minecraft.Instrument,
        Data.Minecraft.Item,
        Data.Minecraft.Language,
        Data.Minecraft.Material,
        Data.Minecraft.Particle,
        Data.Minecraft.Protocol,
        Data.Minecraft.Recipe,
        Data.Minecraft.Sound,
        Data.Minecraft.Tint,
        Data.Minecraft.Version
    build-depends:    base, aeson, containers, text, unordered-containers, vector
    hs-source-dirs:   src
    default-language: GHC2024

test-suite test-hs-minecraft-data
    type: exitcode-stdio-1.0
    main-is: MinecraftDataSpec.hs
    build-depends: base, aeson, bytestring, haskell-src-exts, hs-minecraft-data, hspec, QuickCheck, text, unordered-containers
    hs-source-dirs: test
    default-language: GHC2024
